--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
     "license": "MIT",
     "type": "project",
     "require": {
+	"laravel/framework": "^8.0",
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^8.0",
